[package]
name = "gpui-plot-examples"
version = "0.1.2"
edition = "2021"
authors = ["Pierre"]
repository = "https://github.com/pierreaubert/gpui-plot"
description = "Plotting with gpui in Rust"
license = "MIT"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "044eb7b99048e79da5aa3f2dd489ff3ed8f97a32" }
gpui-plot = { git = "https://github.com/JakkuSakura/gpui-plot" }
parking_lot = "0.12"
plotters = { version = "0.3.7", features = ["default"], optional = true }
plotters-gpui = { git = "https://github.com/JakkuSakura/plotters-gpui", rev = "b7dc582e2c13f3cc2b63370a0eb7e7b0712f211c", features = ["plotters"], optional = true }
tracing = "0.1"
chrono = "0.4"

[features]
default = ["plotters"]
plotters = ["dep:plotters-gpui", "dep:plotters"]


# because plotters' font-kit might fail
[patch.crates-io]
pathfinder_simd = { git = "https://github.com/theoparis/pathfinder.git" }
plotters = { git = "https://github.com/JakkuSakura/plotters", tag = "v0.3.7-gpui" }
plotters-backend = { git = "https://github.com/JakkuSakura/plotters", tag = "v0.3.7-gpui" }
